--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,17 @@
                 android:layout_gravity="bottom|center_horizontal"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PlaceMap"
+                android:id="@+id/textView"
+                android:layout_gravity="center"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:textSize="70dp" />
+
         </FrameLayout>
 
     </RelativeLayout>
